# WebCore-deps

./: .gitignore  CMakeLists.txt  CreateSDK.cmake  Jenkinsfile  README.md  make-cross-linux.bat  make-unix-clang.sh  make-win-msvc-2019-uwp.bat  make-win-msvc-2019.bat  make.sh
WebKitLibraries/source/curl-7.61.0/: ULTRALIGHT-README.txt
WebKitLibraries/source/freetype-2.6.5/: ULTRALIGHT-README.txt
WebKitLibraries/source/harfbuzz-1.3.4/: ULTRALIGHT-README.txt
WebKitLibraries/source/icu-56.1/: ULTRALIGHT-README.txt
WebKitLibraries/source/libjpeg-turbo-1.5.3/: ULTRALIGHT-README.txt
WebKitLibraries/source/libpng-1.6.35/: ULTRALIGHT-README.txt
WebKitLibraries/source/libxml2-2.9.7/: ULTRALIGHT-README.txt
WebKitLibraries/source/libxslt-1.1.32/: ULTRALIGHT-README.txt
WebKitLibraries/source/openssl-1.0.2p/: ULTRALIGHT-README.txt
WebKitLibraries/source/zlib-1.2.11/: ULTRALIGHT-README.txt
cmake/: build_options.cmake
cmake/compiler/: clang-cl.cmake
cmake/toolchains/: clang_x64_windows.cmake  msvc_x64_windows.cmake
src/: WinPlatformDefines.h
src/brotli-1.0.7/: CMakeLists.txt  build-unix.sh  build-win.bat
src/brotli-1.0.7/c/include/brotli/: port.h
src/curl-7.69.1/: CMakeLists.txt  build-unix.sh  build-win.bat
src/curl-7.69.1/lib/: CMakeLists.txt  easy.c  system_win32.c
src/curl-7.88.1/: CMakeLists.txt
src/curl-7.88.1/lib/: http2.c
src/freetype-2.10.1/: CMakeLists.txt  build-unix.sh  build-win.bat
src/freetype-2.10.1/builds/unix/: ftconfig.in
src/freetype-2.10.1/include/freetype/config/: ftconfig.h
src/harfbuzz-2.6.4/: CMakeLists.txt  build-unix.sh  build-win.bat
src/harfbuzz-2.6.4/src/: hb-ft.cc
src/icu-67.1/: CMakeLists.txt
src/icu-67.1/src/common/: restrace.cpp  ucln_cmn.cpp  utext.cpp
src/icu4c-67_1-src/icu/as_is/: bomlist.txt
src/icu4c-67_1-src/icu/source/: build-unix.sh  runConfigureICU
src/icu4c-67_1-src/icu/source/allinone/: Build.Windows.Library.ProjectConfiguration.props
src/icu4c-67_1-src/icu/source/common/: common.vcxproj  common.vcxproj.filters  common_uwp.vcxproj  putil.cpp
src/icu4c-67_1-src/icu/source/common/unicode/: uconfig.h
src/icu4c-67_1-src/icu/source/i18n/: i18n.vcxproj  i18n_uwp.vcxproj
src/libjpeg-turbo-2.0.4/: pax_global_header
src/libjpeg-turbo-2.0.4/libjpeg-turbo-2.0.4/: CMakeLists.txt  build-unix.sh  build-win.bat
src/libjpeg-turbo-2.0.4/libjpeg-turbo-2.0.4/md5/: CMakeLists.txt
src/libpng-1.6.37/: CMakeLists.txt  build-unix.sh  build-win.bat
src/libpsl-0.21.5/: CMakeLists.txt  ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure
src/libpsl-0.21.5/docs/libpsl/: Makefile.in  libpsl.3
src/libpsl-0.21.5/docs/libpsl/html/: api-index-full.html  index.html  libpsl-Public-Suffix-List-functions.html  libpsl.html
src/libpsl-0.21.5/include/: Makefile.in
src/libpsl-0.21.5/msvc/: Makefile.in  config-msvc.mak  config.h.win32
src/libpsl-0.21.5/po/: ChangeLog
src/libpsl-0.21.5/src/: Makefile.in
src/libpsl-0.21.5/tests/: Makefile.in
src/libpsl-0.21.5/tools/: Makefile.in
src/libressl-3.0.2/: CMakeLists.txt  build-unix.sh  build-win.bat
src/libressl-3.0.2/crypto/: cryptlib.c
src/libressl-3.0.2/crypto/compat/: getentropy_win.c
src/libressl-3.0.2/crypto/conf/: conf_mod.c
src/libressl-3.0.2/crypto/ui/: ui_openssl_win.c
src/libressl-3.0.2/include/compat/: stdio.h  stdlib.h
src/libressl-3.9.2/: CMakeLists.txt  build-win.bat
src/libressl-3.9.2/crypto/: CMakeLists.txt
src/libxml2-v2.9.10/: pax_global_header
src/libxml2-v2.9.10/libxml2-v2.9.10/: .gitignore  CMakeLists.txt  build-unix.sh  build-win.bat  xmlIO.c
src/libxslt-v1.1.34/: pax_global_header
src/libxslt-v1.1.34/libxslt-v1.1.34/: CMakeLists.txt  build-unix.sh  build-win.bat
src/libxslt-v1.1.34/libxslt-v1.1.34/libxslt/: config.h  xsltconfig.h
src/nghttp2-1.40.0/: CMakeLists.txt  build-unix.sh  build-win.bat
src/zlib-1.2.11/: CMakeLists.txt  build-unix.sh  build-win.bat
src/zlib-1.2.11/contrib/masmx64/: gvmat64.lst  inffasx64.lst
src/zlib-ng-2.3.2/: CMakeLists.txt
